overflow corrected

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-/* @import url('https://fonts.cdnfonts.com/css/switzer'); */
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,9 +6,11 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 body {
   background-color: #ffffff;
   min-height: 100vh;
+  overflow: hidden;
 }
